--- a/src/main/resources/janusgraph-foundationdb.properties
+++ b/src/main/resources/janusgraph-foundationdb.properties
@@ -1,5 +1,4 @@
-storage.backend=foundationdb
-#  org.janusgraph.diskstorage.foundationdb.FoundationDBStoreManager
+storage.backend=org.janusgraph.diskstorage.foundationdb.FoundationDBStoreManager
 
 #Provide the path of the db directory
 storage.directory=/db/foundationdb
